--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,11 @@
 	display: block;
 	margin: 0 auto;
 }
+
+#size-container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-top: 20px;
+}
