--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,15 @@
 	display: block;
 	margin: 0 auto;
 }
+
+.speed-container{
+	width: 100%;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: flex-start;
+	align-content: center;
+
+	margin-top: 15px;
+}
