--- a/styles.css
+++ b/styles.css
@@ -1,78 +1,87 @@
 * {
-	padding: 10;
-	margin: 10;
-} 
-
-#myCanvas {
-	background: #eee;
-	display: block;
-	margin: 0 auto;
+  padding: 10;
+  margin: 10;
 }
 
-.speed-container{
-	width: 100%;
+#myCanvas {
+  background: #eee;
+  display: block;
+  margin: 0 auto;
+}
 
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: flex-start;
-	align-content: center;
+.speed-container {
+  position: absolute;
+  left: 80px;
+  width: -200px;
+  height: 120px;
+  /* width: 100%;
 
-	margin-top: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  align-content: center;
+
+  margin-top: 15px; */
 }
 
 .alert {
-	padding: 15px;
-	color: white;
-	opacity: 1;
-	transition: opacity 0.6s;
-	position: absolute;
-	left:0;
-	right: 0;
-	top: -40%;
-	text-align: center;
-	margin: 0 auto;
-	max-width: 400px;
-	border-radius: 5px;
+  padding: 15px;
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: -40%;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 400px;
+  border-radius: 5px;
 }
 
 .alert.failure {
-	background-color: #f44336;
+  background-color: #f44336;
+  border-radius: 40px;
 }
 
 .alert.success {
-	background-color: #04AA6D;
+  background-color: #04aa6d;
 }
 
 .close {
-	border-radius: 6px;
-	display: block;
-	margin-left: 10px;
-	background-color: transparent;
-	border: thin solid white;
-	color: white;
-	padding: 5px 15px;
-	font-size: 16px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 10px;
-	cursor: pointer;
+  border-radius: 6px;
+  display: block;
+  margin-left: 10px;
+  background-color: transparent;
+  border: thin solid white;
+  color: white;
+  padding: 5px 15px;
+  font-size: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  cursor: pointer;
 }
 
 #successBtn:hover {
-	background-color: white;
-	color: #04AA6D;
+  background-color: white;
+  color: #04aa6d;
 }
 
 #failureBtn:hover {
-	background-color: white;
-	color: #f44336;
+  background-color: white;
+  color: #f44336;
 }
 
-#size-container{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	margin-top: 20px;
+#size-container {
+  position: absolute;
+  right: 80px;
+  width: -200px;
+  height: 120px;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: right;
+  margin-top: 20px; */
 }
